fixed .overlay to have align-items: center. LOL, not sure how it accidentally became flex-start

--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ section.one .container {
   transition: opacity 0.25s;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .overlay-blur {
